# CWorkshop

./: .gitignore  CMakeLists.txt  README.md  calculator-global.c  calculator.c  main.c
Calculator/: CMakeLists.txt  Makefile  calculator-global.c  calculator-v2.c  calculator.c
Cenix/: CMakeLists.txt  Course.c  Course.h  Makefile  Student.c  Student.h  cenix.c
SizeofAndLimits/: CMakeLists.txt  SizeofTypes.c
Sorting/: BubbleSort.c  BubbleSort.h  CMakeLists.txt  HeapSort.c  HeapSort.h  InsertionSort.c  InsertionSort.h  Makefile  Objects.c  Objects.h  QuickSort.c  QuickSort.h  SelectionSort.c  SelectionSort.h  sorting.c
Workshop/: calculator.c
